...
                              const SizedBox(height: 16),

                              Center(
                                child: TextButton(
                                  onPressed: () => controller.signInAsGuest(),
                                  child: Text(
                                    "Continue as guest",
                                    style: TextStyle(
                                      color: context.theme.colorScheme.primary,
                                      fontWeight: FontWeight.w600,
                                    ),
                                  ),
                                ),
...
