...

    return Scaffold(
      appBar: AppBar(
        title: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Text("Chat Support", style: context.textTheme.titleMedium),
            Text(
              "Online • Typically replies in minutes",
              style: context.textTheme.bodySmall?.copyWith(
                fontSize: 12,
                color: Colors.green,
              ),
...
